# conan-cmake-toolchain

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  ReadMe.md  conanfile.py  main.cpp
.conan/: conan_default_toolchain.cmake
.conan/profiles/default/: base  host
.conan/profiles/mingw/: base  build  host
.conan/profiles/msvc-clang/: base  build
.conan/profiles/wsl/: base  build  host
